force-app/main/default/objects/FS_Flow_Change__c/FS_Flow_Change__c.object-meta.xml
<CustomObject>
    <description>FlowSense Flow Version Change tracking for diff analysis</description>
    <label>FlowSense Flow Change</label>
    <nameField>
        <displayFormat>FS-CHANGE-{0000000}</displayFormat>
        <label>Flow Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlowSense Flow Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <!-- Flow Identification -->
    <fields>
        <fullName>Flow_Api_Name__c</fullName>
        <label>Flow API Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Flow_Label__c</fullName>
        <label>Flow Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <fields>
        <fullName>Version__c</fullName>
        <label>Version Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Snapshot and Hash -->
    <fields>
        <fullName>Snapshot_JSON__c</fullName>
        <label>Flow Snapshot JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Hash__c</fullName>
        <externalId>true</externalId>
        <label>Content Hash</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    
    <!-- Diff Information -->
    <fields>
        <fullName>Diff_Against_Version__c</fullName>
        <label>Diff Against Version</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Diff_Summary__c</fullName>
        <label>Diff Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <fields>
        <fullName>Diff_Details_JSON__c</fullName>
        <label>Diff Details JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Change Statistics -->
    <fields>
        <fullName>Elements_Added__c</fullName>
        <label>Elements Added</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Elements_Removed__c</fullName>
        <label>Elements Removed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Elements_Modified__c</fullName>
        <label>Elements Modified</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <fields>
        <fullName>Total_Elements__c</fullName>
        <label>Total Elements</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    
    <!-- Change Classification -->
    <fields>
        <fullName>Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Patch</fullName>
                </value>
                <value>
                    <fullName>Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>Impact_Score__c</fullName>
        <label>Impact Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    
    <!-- Creation Information -->
    <fields>
        <fullName>Created_By_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By Tool</label>
        <type>Checkbox</type>
    </fields>
    
    <fields>
        <fullName>Change_Description__c</fullName>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    
    <!-- Flow State Information -->
    <fields>
        <fullName>Flow_Status__c</fullName>
        <label>Flow Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>DateTime</type>
    </fields>
    
</CustomObject>