force-app/main/default/objects/FS_Flow_Change__c/fields/Analyzed_At__c.field-meta.xml
<CustomField>
    <fullName>Analyzed_At__c</fullName>
    <label>Analyzed At</label>
    <type>DateTime</type>
</CustomField>