force-app/main/default/objects/FS_Flow_Change__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <label>Content Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>