force-app/main/default/objects/FS_Flow_Change__c/fields/From_Version__c.field-meta.xml
<CustomField>
    <fullName>From_Version__c</fullName>
    <label>From Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>