force-app/main/default/objects/FS_Flow_Change__c/fields/Snapshot_Data__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Data__c</fullName>
    <label>Snapshot Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>