force-app/main/default/objects/FS_Flow_Change__c/fields/To_Version__c.field-meta.xml
<CustomField>
    <fullName>To_Version__c</fullName>
    <label>To Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>